--- a/index.html
+++ b/index.html
@@ -1,197 +1,108 @@
 <!DOCTYPE html>
-<html>
+<html lang="th">
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <title>ระบบจองรถ หก-มน.</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
 <style>
-body {
-  font-family: system-ui, sans-serif;
-  margin: 0;
-  padding: 16px;
-  background: #f5f5f5;
-}
-.card {
-  background: #fff;
-  border-radius: 12px;
-  padding: 16px;
-  margin-bottom: 12px;
-}
-h1 {
-  margin: 0 0 8px;
-}
-button {
-  width: 100%;
-  padding: 14px;
-  border-radius: 10px;
-  border: none;
-  font-size: 16px;
-  margin-top: 8px;
-}
-.primary {
-  background: #0a7cff;
-  color: #fff;
-  font-size: 18px;
-  padding: 18px;
-}
-.secondary {
-  background: #e0e0e0;
-}
-.danger {
-  background: #ff5252;
-  color: #fff;
-}
-input, select {
-  width: 100%;
-  padding: 12px;
-  margin-top: 8px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-}
-.hidden { display: none; }
+body { font-family: system-ui; background:#f4f6f8; margin:0; }
+.container { padding:16px; }
+.card { background:#fff; border-radius:14px; padding:16px; margin-bottom:14px; }
+button { width:100%; padding:16px; font-size:16px; border-radius:12px; border:none; margin-top:10px; }
+.primary { background:#0a7cff; color:#fff; font-size:18px; }
+.secondary { background:#e0e0e0; }
+input,select { width:100%; padding:14px; margin-top:10px; font-size:16px; border-radius:10px; }
+.hidden { display:none; }
 </style>
 </head>
 
 <body>
+<div class="container">
 
 <div class="card">
-  <h1>🚗 ระบบจองรถ หก-มน.</h1>
-  <div id="displayName"></div>
-  <div id="roleText"></div>
-</div>
-
-<div class="card hidden" id="driverInfo">
-  <div>📞 เบอร์มือถือ: <span id="driverPhone"></span></div>
-  <button class="secondary" onclick="editPhone()">แก้ไขเบอร์โทร</button>
-  <button class="danger" onclick="cancelDriver()">ยกเลิกสถานะพนักงานขับรถ</button>
+  <h2>🚗 ระบบจองรถ หก-มน.</h2>
+  <div id="userName"></div>
+  <div id="userRole"></div>
 </div>
 
 <div class="card">
-  <button class="primary" onclick="openBooking()">จองรถพร้อมคนขับ</button>
-
-  <button id="historyBtn" class="secondary hidden" onclick="viewHistory()">
-    ดูประวัติการจอง
-  </button>
-
-  <button id="jobBtn" class="secondary hidden" onclick="viewJobs()">
-    งานทั้งหมด
-  </button>
-
-  <button id="registerDriverBtn" class="secondary hidden" onclick="registerDriver()">
-    ลงทะเบียนเป็นพนักงานขับรถ
-  </button>
+  <button id="mainBtn" class="primary"></button>
+  <button id="historyBtn" class="secondary hidden">ดูประวัติการจอง</button>
+  <button id="driverBtn" class="secondary hidden">ลงทะเบียนเป็นพนักงานขับรถ</button>
 </div>
 
-<!-- DRIVER REGISTER POPUP -->
-<div class="card hidden" id="driverPopup">
-  <h3>ลงทะเบียนเป็นพนักงานขับรถ</h3>
-  <input type="tel" id="driverMobile" placeholder="เบอร์มือถือที่ติดต่อได้">
-  <button class="primary" onclick="saveDriver()">บันทึก</button>
-  <button class="secondary" onclick="closePopup()">ยกเลิก</button>
+<div class="card hidden" id="bookingForm">
+  <h3>จองรถพร้อมคนขับ</h3>
+  <input type="date" id="bookingDate">
+  <input type="time" id="bookingTime">
+  <select id="vehicleType">
+    <option>ไม่ระบุ</option>
+    <option>รถเก๋ง</option>
+    <option>รถกระบะ</option>
+    <option>รถตู้</option>
+  </select>
+  <input type="number" id="passengerCount" placeholder="จำนวนผู้โดยสาร">
+  <input type="text" id="pickupLocation" placeholder="จุดรับ">
+  <input type="text" id="dropoffLocation" placeholder="จุดส่ง">
+  <input type="tel" id="contactMobile" placeholder="เบอร์ผู้ประสานงาน">
+  <button class="primary" onclick="submitBooking()">ยืนยันการจอง</button>
+</div>
+
 </div>
 
 <script>
-/* 🔴 แก้ ENDPOINT ตรงนี้ */
-const ENDPOINT = "https://script.google.com/macros/s/AKfycbwhB_tKrKeR7dqE1ckTWyIjut4_x4wuo9zGQWfgaijhhaLSOL1M5Ge7T7Rv8si6Y2GpMg/exec";
-
-let userId = "";
-let role = "";
-let mobile = "";
+const LIFF_ID = "2008934745-qU0fPztf";
+const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbzVDHjQwF1DqVHF5v8hNyUYV590HDamwDlkS0b0rKlvjiLCegk5jZBlzsJ6W1l7_-l6mw/exec";
+let userId="", role="";
 
 async function init() {
-  await liff.init({ liffId: "2008934745-qU0fPztf" });
+  await liff.init({ liffId: LIFF_ID });
+  if(!liff.isLoggedIn()) liff.login();
 
-  const profile = await liff.getProfile();
-  userId = profile.userId;
-  displayName.innerText = profile.displayName;
+  const p = await liff.getProfile();
+  userId = p.userId;
+  userName.innerText = p.displayName;
 
-  const res = await fetch(ENDPOINT,{
+  const r = await fetch(GAS_ENDPOINT,{
     method:"POST",
     body:JSON.stringify({
       action:"auto_register",
       line_user_id:userId,
-      display_name:profile.displayName
+      display_name:p.displayName
     })
   }).then(r=>r.json());
 
-  role = res.role;
-  mobile = res.mobile;
+  role = r.role;
+  userRole.innerText = "สถานะ: " + (role==="driver"?"พนักงานขับรถ":"ผู้ใช้งานทั่วไป");
 
-  roleText.innerText =
-    "สถานะ: " + (role === "driver" ? "พนักงานขับรถ" : "ผู้ใช้งานทั่วไป");
+  mainBtn.innerText = role==="driver" ? "งานทั้งหมด" : "จองรถพร้อมคนขับ";
+  if(role!=="driver") historyBtn.classList.remove("hidden");
 
-  if (role === "driver") {
-    driverInfo.classList.remove("hidden");
-    driverPhone.innerText = mobile || "-";
-    jobBtn.classList.remove("hidden");
-  } else {
-    historyBtn.classList.remove("hidden");
-    registerDriverBtn.classList.remove("hidden");
-  }
+  mainBtn.onclick = ()=> bookingForm.classList.remove("hidden");
 }
 
-function registerDriver() {
-  driverPopup.classList.remove("hidden");
-}
-
-function closePopup() {
-  driverPopup.classList.add("hidden");
-}
-
-async function saveDriver() {
-  if (!driverMobile.value) {
-    alert("กรุณากรอกเบอร์โทร");
-    return;
-  }
-  await fetch(ENDPOINT,{
+async function submitBooking(){
+  await fetch(GAS_ENDPOINT,{
     method:"POST",
     body:JSON.stringify({
-      action:"register_driver",
+      action:"create_booking",
       line_user_id:userId,
-      mobile_phone:driverMobile.value
+      booking_date:bookingDate.value,
+      booking_time:bookingTime.value,
+      vehicle_type:vehicleType.value,
+      passenger_count:passengerCount.value,
+      pickup_location:pickupLocation.value,
+      dropoff_location:dropoffLocation.value,
+      contact_mobile:contactMobile.value
     })
   });
-  alert("ลงทะเบียนเรียบร้อย");
-  location.reload();
+  alert("จองรถเรียบร้อย");
+  bookingForm.classList.add("hidden");
 }
-
-async function editPhone() {
-  const newPhone = prompt("แก้ไขเบอร์มือถือ", mobile);
-  if (!newPhone) return;
-
-  await fetch(ENDPOINT,{
-    method:"POST",
-    body:JSON.stringify({
-      action:"register_driver",
-      line_user_id:userId,
-      mobile_phone:newPhone
-    })
-  });
-  location.reload();
-}
-
-async function cancelDriver() {
-  if (!confirm("ยืนยันยกเลิกสถานะพนักงานขับรถ?")) return;
-  await fetch(ENDPOINT,{
-    method:"POST",
-    body:JSON.stringify({
-      action:"cancel_driver",
-      line_user_id:userId
-    })
-  });
-  location.reload();
-}
-
-/* navigation (placeholder) */
-function openBooking(){ alert("ไปหน้าฟอร์มจองรถ"); }
-function viewHistory(){ alert("ดูประวัติการจอง"); }
-function viewJobs(){ alert("งานทั้งหมดของพนักงานขับรถ"); }
 
 init();
 </script>
-
 </body>
 </html>
